--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <meta name="description" content="Ecity Logistics: industrial & EV supply transport across Electronics City, Bommasandra, Hosur and the South-India corridor. 2-tonne fleet, palletised loads, same-day and outstation runs.">
   <meta name="keywords" content="industrial logistics, EV logistics, Electronics City, Bommasandra, Hosur, 2-tonne transport, factory deliveries">
   <link rel="canonical" href="https://ecitylogistics.com/">
-
+  <link rel="icon" href="assets/images/ecitylogo.png" type="x-icon">
   <!-- Open Graph / Social preview -->
   <meta property="og:title" content="Ecity Logistics — Industrial & EV Supply Transport Across South India">
   <meta property="og:description" content="More than a pickup service — we handle full industrial supply chains, from small consignments to heavy factory loads across Bengaluru and South India.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://ecitylogistics.com/">
-  <meta property="og:image" content="https://ecitylogistics.com/assets/images/hero_bolero-1200.jpg">
+  <meta property="og:image" content="https://ecitylogistics.com/assets/images/hero_bolero.png">
   <meta name="twitter:card" content="summary_large_image">
 
   <link rel="stylesheet" href="assets/css/index.css">
