--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 
         <div class="footer-contact">
           <div><strong>Contact</strong></div>
-          <div><a href="mailto:deepu@ecitylogistics.com" class="footer-link">deepu@ecitylogistics.com</a></div>
+          <div><a href="mailto:info@ecitylogistics.com" class="footer-link">info@ecitylogistics.com</a></div>
           <div><a href="tel:+917338410318" class="footer-link">+91 97465 27779</a></div>
         </div>
       </div>
