Add D1 database authentication and role-based dashboards

--- a/index.html
+++ b/index.html
@@ -43,10 +43,14 @@
         <a href="#services" class="nav-link">Services</a>
         <a href="#routes" class="nav-link">Routes</a>
         <a href="#fleet" class="nav-link">Fleet</a>
+        <!-- Login Button -->
+        <button onclick="openLoginModal()" class="nav-link"
+          style="background:none; border:none; cursor:pointer; font-family:inherit;">Login</button>
         <a href="#enquire" class="nav-link nav-cta-outline">Get a Quote</a>
       </nav>
     </div>
   </header>
+  <script src="assets/js/login.js"></script>
 
   <main>
     <!-- HERO -->
