--- a/dashboard.html
+++ b/dashboard.html
@@ -5,54 +5,370 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Ecity Logistics</title>
-    <meta name="robots" content="noindex, nofollow">
-    <link rel="stylesheet" href="assets/css/index.css"> <!-- Base styles -->
     <link rel="stylesheet" href="assets/css/dashboard.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
-    <div class="dashboard-container" style="display:none;" id="app-container">
+    <div class="dashboard-container">
         <!-- Sidebar -->
         <aside class="sidebar">
-            <div class="sidebar-header">
-                <a href="/" class="logo-text">Ecity Admin</a>
+            <div class="sidebar-logo">
+                <div class="sidebar-logo-icon">E</div>
+                <span class="sidebar-logo-text">Ecity</span>
             </div>
 
-            <nav class="sidebar-nav" id="sidebar-nav">
-                <!-- Injected via JS -->
-            </nav>
-
-            <div class="user-profile">
-                <div class="user-info">
-                    <div class="avatar" id="user-avatar">AD</div>
-                    <div class="user-details">
-                        <h4 id="user-name">Loading...</h4>
-                        <span id="user-role">...</span>
-                    </div>
+            <div class="sidebar-user">
+                <div class="sidebar-user-avatar" id="sidebarUserAvatar"></div>
+                <div class="sidebar-user-info">
+                    <div class="sidebar-user-name" id="sidebarUserName">Loading...</div>
+                    <div class="sidebar-user-role" id="sidebarUserRole">-</div>
                 </div>
             </div>
+
+            <nav class="sidebar-nav">
+                <div class="nav-section-title">Main</div>
+                <a href="#" class="nav-item active" data-view="dashboard">
+                    <span class="nav-item-icon">📊</span>
+                    <span>Dashboard</span>
+                </a>
+                <a href="#" class="nav-item owner-only" data-view="users" style="display: none;">
+                    <span class="nav-item-icon">👥</span>
+                    <span>User Management</span>
+                </a>
+                <a href="#" class="nav-item" data-view="trips">
+                    <span class="nav-item-icon">🚚</span>
+                    <span>Trips</span>
+                </a>
+                <a href="#" class="nav-item owner-only" data-view="vehicles" style="display: none;">
+                    <span class="nav-item-icon">🚐</span>
+                    <span>Vehicles</span>
+                </a>
+
+                <div class="nav-section-title">Account</div>
+                <a href="#" class="nav-item" id="settingsLink">
+                    <span class="nav-item-icon">⚙️</span>
+                    <span>Settings</span>
+                </a>
+                <a href="#" class="nav-item" id="signOutLink">
+                    <span class="nav-item-icon">🚪</span>
+                    <span>Sign Out</span>
+                </a>
+            </nav>
         </aside>
 
         <!-- Main Content -->
         <main class="main-content">
-            <div class="top-bar">
-                <h1 class="page-title" id="page-title">Dashboard</h1>
-                <button onclick="logout()" class="logout-btn">Sign Out</button>
-            </div>
+            <!-- Header -->
+            <header class="dashboard-header">
+                <h1 class="header-title" id="headerTitle">Dashboard</h1>
+                <div class="header-actions">
+                    <!-- Header actions can be added here if needed -->
+                </div>
+            </header>
 
-            <div id="dashboard-content">
-                <!-- Content injected via JS -->
-                <div style="text-align:center; margin-top:50px;">
-                    <div class="spinner"></div>
-                    <p>Loading data...</p>
+            <!-- Content Container -->
+            <div class="content-container">
+                <!-- Dashboard View -->
+                <div id="dashboardView" class="view-content">
+                    <div class="stats-grid">
+                        <div class="stat-card">
+                            <div class="stat-card-header">
+                                <div>
+                                    <div class="stat-card-label">Total Revenue</div>
+                                    <div class="stat-card-value" id="totalRevenue">₹0</div>
+                                    <div class="stat-card-change positive">+12% this month</div>
+                                </div>
+                                <div class="stat-card-icon primary">💰</div>
+                            </div>
+                        </div>
+
+                        <div class="stat-card">
+                            <div class="stat-card-header">
+                                <div>
+                                    <div class="stat-card-label">Active Trips</div>
+                                    <div class="stat-card-value" id="activeTrips">0</div>
+                                    <div class="stat-card-change positive">+5 today</div>
+                                </div>
+                                <div class="stat-card-icon success">🚚</div>
+                            </div>
+                        </div>
+
+                        <div class="stat-card owner-only" style="display: none;">
+                            <div class="stat-card-header">
+                                <div>
+                                    <div class="stat-card-label">Total Drivers</div>
+                                    <div class="stat-card-value" id="totalDrivers">0</div>
+                                    <div class="stat-card-change">Active now</div>
+                                </div>
+                                <div class="stat-card-icon warning">👥</div>
+                            </div>
+                        </div>
+
+                        <div class="stat-card owner-only" style="display: none;">
+                            <div class="stat-card-header">
+                                <div>
+                                    <div class="stat-card-label">Vehicles</div>
+                                    <div class="stat-card-value" id="totalVehicles">0</div>
+                                    <div class="stat-card-change">Available</div>
+                                </div>
+                                <div class="stat-card-icon info">🚐</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Recent Activity Section -->
+                    <div class="content-section">
+                        <div class="section-header">
+                            <h2 class="section-title">Recent Activity</h2>
+                        </div>
+                        <div class="empty-state">
+                            <div class="empty-state-icon">📋</div>
+                            <div class="empty-state-title">No recent activity</div>
+                            <div class="empty-state-text">Your recent trips and updates will appear here</div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- User Management View -->
+                <div id="usersView" class="view-content" style="display: none;">
+                    <div class="content-section">
+                        <div class="section-header">
+                            <h2 class="section-title">All Users</h2>
+                            <button class="btn btn-primary" id="addUserBtnTop">
+                                <span>➕</span>
+                                Add User
+                            </button>
+                        </div>
+
+                        <table class="user-management-table" id="usersTable">
+                            <thead>
+                                <tr>
+                                    <th>User</th>
+                                    <th>Role</th>
+                                    <th>Permissions</th>
+                                    <th>Status</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody id="usersTableBody">
+                                <!-- Users will be loaded here -->
+                            </tbody>
+                        </table>
+
+                        <div id="usersEmptyState" class="empty-state" style="display: none;">
+                            <div class="empty-state-icon">👥</div>
+                            <div class="empty-state-title">No users found</div>
+                            <div class="empty-state-text">Add your first user to get started</div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Trips View -->
+                <div id="tripsView" class="view-content" style="display: none;">
+                    <div class="content-section">
+                        <div class="section-header">
+                            <h2 class="section-title">Trips</h2>
+                        </div>
+                        <div class="empty-state">
+                            <div class="empty-state-icon">🚚</div>
+                            <div class="empty-state-title">No trips yet</div>
+                            <div class="empty-state-text">Trips will appear here once created</div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Vehicles View -->
+                <div id="vehiclesView" class="view-content" style="display: none;">
+                    <div class="content-section">
+                        <div class="section-header">
+                            <h2 class="section-title">All Vehicles</h2>
+                            <button class="btn btn-primary" id="addVehicleBtn">
+                                <span>➕</span>
+                                Add Vehicle
+                            </button>
+                        </div>
+
+                        <table class="user-management-table" id="vehiclesTable">
+                            <thead>
+                                <tr>
+                                    <th>Vehicle Number</th>
+                                    <th>Type</th>
+                                    <th>Model</th>
+                                    <th>Capacity</th>
+                                    <th>Status</th>
+                                    <th>Assigned Driver</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody id="vehiclesTableBody">
+                                <!-- Vehicles will be loaded here -->
+                            </tbody>
+                        </table>
+
+                        <div id="vehiclesEmptyState" class="empty-state" style="display: none;">
+                            <div class="empty-state-icon">🚐</div>
+                            <div class="empty-state-title">No vehicles registered</div>
+                            <div class="empty-state-text">Add your first vehicle to get started</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
     </div>
 
+    <!-- Add/Edit User Modal -->
+    <div class="modal-overlay" id="userModal">
+        <div class="modal">
+            <div class="modal-header">
+                <h3 class="modal-title" id="userModalTitle">Add User</h3>
+                <button class="modal-close" id="closeUserModal">✕</button>
+            </div>
+            <div class="modal-body">
+                <form id="userForm">
+                    <input type="hidden" id="userId">
+
+                    <div class="form-group">
+                        <label class="form-label" for="userName">Full Name</label>
+                        <input type="text" id="userName" class="form-input" placeholder="Enter full name" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="form-label" for="userUsername">Username</label>
+                        <input type="text" id="userUsername" class="form-input" placeholder="Enter username" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="form-label" for="userPassword">Password</label>
+                        <input type="password" id="userPassword" class="form-input" placeholder="Enter password"
+                            required>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="form-label" for="userRole">Role</label>
+                        <select id="userRole" class="form-select" required>
+                            <option value="">Select role</option>
+                            <option value="owner">Owner</option>
+                            <option value="driver">Driver</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="form-label" for="userPermissions">Permissions</label>
+                        <select id="userPermissions" class="form-select" required>
+                            <option value="basic">Basic</option>
+                            <option value="all">All</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="form-label" for="userStatus">Status</label>
+                        <select id="userStatus" class="form-select" required>
+                            <option value="active">Active</option>
+                            <option value="inactive">Inactive</option>
+                        </select>
+                    </div>
+
+                    <div id="formError" class="form-error" style="display: none;"></div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" id="cancelUserBtn">Cancel</button>
+                <button class="btn btn-primary" id="saveUserBtn">Save User</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Add/Edit Vehicle Modal -->
+    <div class="modal-overlay" id="vehicleModal">
+        <div class="modal">
+            <div class="modal-header">
+                <h3 class="modal-title" id="vehicleModalTitle">Add Vehicle</h3>
+                <button class="modal-close" id="closeVehicleModal">✕</button>
+            </div>
+            <div class="modal-body">
+                <form id="vehicleForm">
+                    <input type="hidden" id="vehicleId">
+
+                    <div class="form-group">
+                        <label class="form-label" for="vehicleNumber">Vehicle Number</label>
+                        <input type="text" id="vehicleNumber" class="form-input" placeholder="e.g., TN 01 AB 1234"
+                            required>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="form-label" for="vehicleType">Vehicle Type</label>
+                        <select id="vehicleType" class="form-select" required>
+                            <option value="">Select type</option>
+                            <option value="Truck">Truck</option>
+                            <option value="Van">Van</option>
+                            <option value="Pickup">Pickup</option>
+                            <option value="Container">Container Truck</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="form-label" for="vehicleModel">Model</label>
+                        <input type="text" id="vehicleModel" class="form-input" placeholder="e.g., Tata LPT 2518"
+                            required>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="form-label" for="vehicleCapacity">Capacity</label>
+                        <input type="text" id="vehicleCapacity" class="form-input" placeholder="e.g., 2.5 ton">
+                    </div>
+
+                    <div class="form-group">
+                        <label class="form-label" for="vehicleStatus">Status</label>
+                        <select id="vehicleStatus" class="form-select" required>
+                            <option value="available">Available</option>
+                            <option value="in-use">In Use</option>
+                            <option value="maintenance">Maintenance</option>
+                            <option value="unavailable">Unavailable</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="form-label" for="vehicleDriver">Assign Driver (Optional)</label>
+                        <select id="vehicleDriver" class="form-select">
+                            <option value="">No driver assigned</option>
+                            <!-- Drivers will be loaded here -->
+                        </select>
+                    </div>
+
+                    <div id="vehicleFormError" class="form-error" style="display: none;"></div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" id="cancelVehicleBtn">Cancel</button>
+                <button class="btn btn-primary" id="saveVehicleBtn">Save Vehicle</button>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Delete Confirmation Modal -->
+    <div class="modal-overlay" id="deleteConfirmModal">
+        <div class="modal">
+            <div class="modal-header">
+                <h3 class="modal-title">Confirm Deletion</h3>
+                <button class="modal-close" id="closeDeleteModal">✕</button>
+            </div>
+            <div class="modal-body">
+                <p style="margin-bottom: 16px;">Are you sure you want to delete this user?</p>
+                <p style="color: var(--text-secondary); font-size: 14px;">This action cannot be undone.</p>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" id="cancelDelete">Cancel</button>
+                <button class="btn btn-danger" id="confirmDelete">Delete User</button>
+            </div>
+        </div>
+    </div>
+
     <script src="assets/js/dashboard.js"></script>
+    <script src="assets/js/vehicle-management.js"></script>
 </body>
 
 </html>
