feat: complete seo optimization and modular architecture refactoring

--- a/dashboard.html
+++ b/dashboard.html
@@ -367,7 +367,7 @@
         </div>
     </div>
 
-    <script src="assets/js/dashboard.js"></script>
+    <script type="module" src="assets/js/dashboard.js"></script>
     <script src="assets/js/vehicle-management.js"></script>
 </body>
 
