--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ecity Logistics — Industrial & EV Supply Transport Across South India</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Primary Meta Tags -->
+  <title>Ecity Logistics - Professional Transport & Delivery Services in City</title>
+  <meta name="title" content="Ecity Logistics - Professional Transport & Delivery Services">
   <meta name="description"
-    content="Ecity Logistics: industrial & EV supply transport across Electronics City, Bommasandra, Hosur and the South-India corridor. 2-tonne fleet, palletised loads, same-day and outstation runs.">
+    content="Ecity Logistics offers reliable transport and delivery services including goods transportation, household shifting, market deliveries, and industrial load management. Professional logistics solutions at competitive rates.">
   <meta name="keywords"
-    content="industrial logistics, EV logistics, Electronics City, Bommasandra, Hosur, 2-tonne transport, factory deliveries">
-  <link rel="canonical" href="https://ecitylogistics.com/">
+    content="logistics, transport services, delivery, goods transportation, household shifting, market delivery, courier services, freight, cargo, Ecity">
   <link rel="icon" href="assets/images/ecitylogo.png" type="x-icon">
   <!-- Open Graph / Social preview -->
   <meta property="og:title" content="Ecity Logistics — Industrial & EV Supply Transport Across South India">
@@ -17,7 +19,7 @@
     content="More than a pickup service — we handle full industrial supply chains, from small consignments to heavy factory loads across Bengaluru and South India.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://ecitylogistics.com/">
-  <meta property="og:image" content="https://ecitylogistics.com/assets/images/hero_bolero.png">
+  <meta property="og:image" content="https://ecitylogistics.com/assets/images/hero_bolero.jpg">
   <meta name="twitter:card" content="summary_large_image">
 
   <link rel="stylesheet" href="assets/css/index.css">
@@ -82,7 +84,7 @@
 
         <div class="hero-media">
           <picture>
-            <img src="assets/images/hero_bolero.png"
+            <img src="assets/images/hero_bolero.jpg"
               alt="Bolero pickup 2.0 with branded E-City Logistics container rear" loading="lazy" decoding="async"
               width="1200" height="680" class="hero-image">
           </picture>
@@ -111,6 +113,7 @@
               We service factories, EV assemblers, textile units and warehouses. Timely dispatch, secure transit and
               dependable scheduling for critical supply chains.
             </p>
+            <a href="#enquire" class="text-link" aria-label="Get a quote for industry expertise">Get a Quote →</a>
           </article>
 
           <article class="service-ring-card">
@@ -122,6 +125,7 @@
               2-tonne capacity for medium-weight loads: auto parts, battery components, palletised FMCG, machinery
               spares and warehouse stock.
             </p>
+            <a href="#enquire" class="text-link" aria-label="Get a quote for transport">Get a Quote →</a>
           </article>
 
           <article class="service-ring-card">
@@ -133,6 +137,7 @@
               Permissible load norms, regular vehicle maintenance and driver checklists. Transparent costing — no hidden
               fees.
             </p>
+            <a href="#enquire" class="text-link" aria-label="Get a quote for compliance">Get a Quote →</a>
           </article>
         </div>
       </div>
